selected the better attributes

--- a/Decision_Tree/Credit_Analysis/Decision_tree.ipynb
+++ b/Decision_Tree/Credit_Analysis/Decision_tree.ipynb
@@ -517,6 +517,10 @@
     }
    ],
    "source": [
+    "# Transformation of categorical attributes into numerical attributes, passing the index of each categorical column\n",
+    "# We need to create an object for each categorical attribute, because in the sequence we will perform the encoding process again for the test record\n",
+    "# If different objects are used, the number assigned to each value may be different, which will leave the test inconsistent\n",
+    "\n",
     "labelencoder1 = LabelEncoder()\n",
     "predictor[:,0] = labelencoder1.fit_transform(predictor[:,0])\n",
     "\n",
