selected the better attributes

--- a/Support_Vector_Machine/Credit_Analysis/SVC.ipynb
+++ b/Support_Vector_Machine/Credit_Analysis/SVC.ipynb
@@ -443,6 +443,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<0' '0<=X<200' \"'no checking'\" '>=200']\n",
+      "[\"'critical/other existing credit'\" \"'existing paid'\"\n",
+      " \"'delayed previously'\" \"'no credits/all paid'\" \"'all paid'\"]\n",
+      "['radio/tv' 'education' 'furniture/equipment' \"'new car'\" \"'used car'\"\n",
+      " 'business' \"'domestic appliance'\" 'repairs' 'other' 'retraining']\n",
+      "[\"'no known savings'\" '<100' '500<=X<1000' '>=1000' '100<=X<500']\n",
+      "['>=7' '1<=X<4' '4<=X<7' 'unemployed' '<1']\n",
+      "[\"'male single'\" \"'female div/dep/mar'\" \"'male div/sep'\" \"'male mar/wid'\"]\n",
+      "['none' 'guarantor' \"'co applicant'\"]\n",
+      "[\"'real estate'\" \"'life insurance'\" \"'no known property'\" 'car']\n",
+      "['none' 'bank' 'stores']\n",
+      "['own' \"'for free'\" 'rent']\n",
+      "['skilled' \"'unskilled resident'\" \"'high qualif/self emp/mgmt'\"\n",
+      " \"'unemp/unskilled non res'\"]\n",
+      "['yes' 'none']\n",
+      "['yes' 'no']\n",
+      "['good' 'bad']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Verify if there are missing values or mispellings in the dataset\n",
+    "\n",
+    "#Get column names from categorical variables\n",
+    "str_columns = str_variables.columns\n",
+    "\n",
+    "for name in str_columns:\n",
+    "    unique_credito = credit[name].unique()\n",
+    "    print(unique_credito)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [],
