Include CMeans Algorithm

--- a/Groupings/c-means.ipynb
+++ b/Groupings/c-means.ipynb
@@ -512,6 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Determine the index of each classe and color. Convert color to array and normalize (/255)\n",
     "index_setosa = iris[class_ == 'Iris-setosa'].index\n",
     "color_setosa = color[index_setosa].T\n",
     "color_setosa = np.array(color_setosa)/255\n",
@@ -552,6 +553,8 @@
     }
    ],
    "source": [
+    "#Create graphs for visualization\n",
+    "\n",
     "f = plt.figure(0, figsize=(13,5))\n",
     "plt.suptitle('CMeans Algorithm\\n Database: Iris')\n",
     "\n",
